--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_gemini: ^2.0.5
   image_picker: ^1.1.2
   provider: ^6.1.2
+  flutter_tts: ^4.0.2
 
 dev_dependencies:
   flutter_test:
